--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,136 +1,154 @@
-body {
-  background: #f5d9c7;
-  color: #5C351F;
-  padding: 25px;
-  font-family: sans-serif;
-
+/* universal styles */
+body{
+    background-color: #f4ffd7;
+    font-family: 'Cinzel', serif;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 18px;
+    color: black;
+    margin: 0px auto;
+    text-align: center;
+    width: 90%;
+    border: 2px groove #0e750e;
+    padding: 10px;
 }
 
-p {
-  background: #f5d9c7;
-  color: #5C351F;
-  font-size: 16px;
-  font-family: 'Quicksand', sans-serif;
-  text-align: center;
+img{
+    max-width:300px;
+    max-height: 300px;
 }
 
-header {
-  border-color: #5C351F;
-  border-width: 1px;
-  background-image: url(/Users/meagan/Desktop/Projects/Dasmoto/resources/images/pattern.jpeg);
-}
-
-nav li{
-  display: inline;
-  padding-right: 2rem;
-  text-align: center;
+h1, h2, h3, h4, p{
+    margin: 10px auto;
 }
 
 h1{
-  color: #f5d9c7;
-  font-family:'Quicksand', sans-serif;
-  text-align: center;
-  font-size:100px;
-  padding: 10px;
+    font-family: 'Cinzel';
+    color: #0e750e;
+    font-size: 2.75rem;
+    margin: 5px auto;
+
 }
 
-h2 {
-  color: #B04B59;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  text-align: center;
-  font-size: 18px;
-  width: 500px;
-  margin: 0 auto;
+h2, h3, h4, p{
+    font-family: 'Cormorant Garamond';
 }
 
-.soapimg{
-  border-radius: 50%;
-  margin-left: 550px;
-  margin-bottom: 30px;
+/* navigation bar */
+
+nav{
+    width: auto;
+    display: inline;
+    align-items: center;
+    height: 100px;
 }
 
-.mepic{ 
-  border-radius: 50%;
-  margin-left: 550px;
-  margin-top: 15px;
-  z-index: 1;
-  position: relative;
-  right: 480px;
+.tagline{
+    font-style: italic;
+    font-size: 1.15rem;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding-top: 0px;
 }
 
-#name{
-  text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 18px;
-  position: relative; 
-  bottom: 20px;
-  background-color: #B04B59;
-  color: #5C351F;
-  letter-spacing: 1;
+.name{
+    margin-bottom: 20px; 
+}
+ul{
+    margin-top: 10px;
+    overflow: hidden;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background-color: #fff;
+}
+li{
+    display: inline;
+    float: center;
+    margin: 10px;
+    padding: 20px;
+}
+a:hover{
+    color: #6a9e17;
+    text-decoration: underline;
+}
+a:link{
+    color: #000;
+    text-decoration: none;
+}
+a:visited{
+    color: #000;
+    text-decoration: none;
+}
+a:active{
+    color: #6a9e17;
+    text-decoration: underline;
 }
 
-.biopic{
-  background-color: #B04B59;
-  width: 400px;
-  margin: 2px auto;
-  position: relative;
+/*mission*/
+.mission{
+    background-image: url(/Users/meagan/Desktop/Projects/RevelataProj/Resources/images/main.jpg);
+    max-width: 100%;
+    height: 450px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    padding-top: 35px;
+}
+.content{
+    background-color: white;
+    width: 100%;
+    margin: auto;
+    display: block;
+    padding: 20px 0px;
 }
 
-.navlink{
-  text-align: center;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 22px;
-  color: #FFFFFF;
-  padding-bottom: 7px;
-}
-.goals{
-  color: #eeddd3;
-  text-align: center;
-  background-color: #A86239;
-  padding: 5px;
-  border: #5C351F 1px solid;
-  line-height: 1.4em;
-  max-width: 250px;
-  border-radius: 10px;
-  margin: 0 auto;
+h2.content{
+    font-weight: normal;
+    font-size: 2rem;
 }
 
-.degrees{
-  color: #eeddd3;
-  font-size: 16px;
-  font-family: 'Quicksand', sans-serif;
-  background: #A86239;
-  text-align: left;
-  line-height: 1.4em;
-  padding: 3px;
+
+/*products*/
+.selection{
+    margin-top: 15px;
+}
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;  
+    align-items: center;
+    
+}
+.product{
+    display: block;
+    flex-wrap: align; 
+    width: 30%;
+    margin: 10px;
+   
+}
+.product img{
+    margin-left: auto;
+    margin-right: auto;
+    width: 250px;
+    padding: 15px;
+    height: 250px;
 }
 
-.degreeinfo{
-  text-align: left;
-  font-size: 16px;
-  color: #5C351F;
-  font-style:bold;
-  font-family: 'Quicksand', sans-serif;
+.products p{
+    font-size: 1.3rem;
 }
 
-.links{
-  list-style: square;
+/*team*/
+.team{
+    margin: 35px auto;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    background-color: #d1ee82;
+    border: 1px double #0e750e;
+    width: 500px;
 }
 
-.aboutme{
-  background-color: rgba(255,203,164,.6);
-  text-align: center;
-  padding: 10px;
-  border: #5C351F solid 1px;
-  border-radius: 5px;
-}
-
+/*footer*/
 footer{
-  text-align:center;
-  font-size:10px;
-  padding:3px;
-  background-color:#5C351F;
-  color: white;
-  opacity: .75;
+    line-height: 10px;
 }
-
